--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ body {
 	color: #000;
 	background-color: #fff;
 	
-	transition: background-color .5s ease-out;
+	transition: background-color .7s ease-out;
 }
 
 a,
@@ -65,6 +65,7 @@ h6{
 
 h1 {
 	font-size: 1.5em;
+	line-height: 1.25;
 	font-family: 'maisonBold';
 }
 
@@ -265,10 +266,13 @@ p {
 
 .contact {
 	font-family: 'maisonLight';
-	font-size: .85em;
+	font-size: .75em;
+	display: block;
 }
 
-
+.contactText {
+	display: none;
+}
 
 
 
@@ -315,9 +319,7 @@ p {
 
 /*//////// content /////////*/
 
-.content {
-	border: 1px solid red;
-}
+
 
 
 /*//////// work /////////*/
@@ -344,7 +346,7 @@ p {
 .clients,
 .cv {
 	font-family: 'maisonBold', helvetica, arial, sans-serif;
-	font-size: 1.25em;
+	font-size: 1em;
 	line-height: 1.75;
 }
 
@@ -418,6 +420,14 @@ p {
 		font-size: .45em;
 		display: inline-block;
 		margin-top: 0;
+	}
+	
+	.contactText {
+		display: inline-block;
+	}
+	
+	.cv {
+		font-size: 1.25em;
 	}
 	
 }
