hover und smartphone version

--- a/css/main.css
+++ b/css/main.css
@@ -359,7 +359,6 @@ p {
 
 .caseImgLinkText {
 	position: absolute;
-	bottom: -3em;
 	color: rgba(255, 245, 6, 0.85);
 	font-family: 'maisonBold';
 	font-size: 5em;
@@ -370,7 +369,6 @@ p {
 	width: 100%;
 	height: 100%;
 	padding: .5em;
-	
 	
 	transition: all .3s ease-out;
 }
@@ -428,7 +426,6 @@ p {
 }
 
 .caseLink:hover > .caseImgLinkText {
-	bottom: 0em;
 	opacity: 1;
 }
 
@@ -558,7 +555,7 @@ p {
    Media Queries
    ========================================================================== */
 
-@media only screen and (min-width: 21em) {
+@media only screen and (min-width: 769px) {
 	.headerBig .logo {
 		font-size: 6em !important;
 		line-height: 1.15;
@@ -596,9 +593,28 @@ p {
 	
 	/*//////// Cases ////////////*/
 	
-	.cases a:nth-child(odd) > .caseImgLinkText {
+	.cases .caseLink:nth-child(odd) > .caseImgLinkText {
 		text-align: right;
+		right: -3em;
 	}
+	
+	.cases .caseLink:nth-child(even) > .caseImgLinkText {
+		text-align: left;
+		left: -3em;
+	}
+	
+	/*hover styles */
+	
+	.cases .caseLink:nth-child(odd):hover > .caseImgLinkText {
+		right: 0em;
+	}
+	
+	.cases .caseLink:nth-child(even):hover > .caseImgLinkText {
+		left: 0em;
+	}
+	
+	
+
 
 	#etapes {
 		background-color: #000;
