--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,11 @@ h1 {
 	font-family: 'maisonBold';
 }
 
+ul {
+	padding: 0;
+	list-style-type: none;
+}
+
 .container {
 	width: 100%;
 	margin: 0;
@@ -460,7 +465,72 @@ p {
 }
 
 
-/*//////// CV ////////////*/
+/*//////// me ////////////*/
+
+#me {
+	margin-top: 8em;
+}
+.about li,
+.about p {
+	font-family: 'maisonBold', helvetica, arial, sans-serif;
+	font-size: 1.25em;
+}
+
+/* chart*/
+
+.chartWrapper {
+	height: 260px;
+}
+
+.chart {
+	border: 1px solid;
+	border-radius: 100%;
+	display: block;
+	
+	width: 20px;
+	height: 20px;
+	margin-left: -10px;
+	margin-top: -10px;
+	
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	
+	-webkit-transform-origin: center;
+}
+
+.chartInner {
+	border: 2px solid;
+	border-radius: 100%;
+	display: block;
+	
+	width: 4px;
+	height: 4px;
+	margin-left: -2px;
+	margin-top: -2px;
+	
+	position: absolute;
+	top: 50%;
+	left: 50%;
+}
+
+.chartCtrl ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+.chartCtrl li {
+	display: block;
+	float: left;
+	padding: 3px;
+	width: 50%;
+	font-family: 'maisonBold', helvetica, arial, sans-serif;
+	
+	
+}
+
+
 .clients,
 .cv {
 	font-family: 'maisonBold', helvetica, arial, sans-serif;
